[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/GUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=4]
radius = 144.0
height = 250.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29, 300 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512.25, 21.5 )

[node name="Camera" type="Camera2D"]
position = Vector2( 518, 305 )
script = ExtResource( 2 )

[node name="GUI" parent="." instance=ExtResource( 1 )]

[node name="WheelMovementSafeZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelMovementSafeZone"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="EdgeScrolling" type="Node2D" parent="."]

[node name="Right" type="Area2D" parent="EdgeScrolling"]

[node name="Right" type="CollisionShape2D" parent="EdgeScrolling/Right"]
position = Vector2( 483, 0 )
shape = SubResource( 2 )

[node name="Left" type="Area2D" parent="EdgeScrolling"]

[node name="Left" type="CollisionShape2D" parent="EdgeScrolling/Left"]
position = Vector2( -483, 0 )
shape = SubResource( 2 )

[node name="Up" type="Area2D" parent="EdgeScrolling"]

[node name="Up" type="CollisionShape2D" parent="EdgeScrolling/Up"]
position = Vector2( 0.25, -278.5 )
shape = SubResource( 3 )

[node name="Down" type="Area2D" parent="EdgeScrolling"]

[node name="Down" type="CollisionShape2D" parent="EdgeScrolling/Down"]
position = Vector2( 0, 278 )
shape = SubResource( 3 )

[connection signal="mouse_entered" from="WheelMovementSafeZone" to="." method="_on_WheelMovementSafeZone_mouse_entered"]
[connection signal="mouse_exited" from="WheelMovementSafeZone" to="." method="_on_WheelMovementSafeZone_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScrolling/Right" to="." method="_on_Right_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScrolling/Right" to="." method="_on_Right_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScrolling/Left" to="." method="_on_Left_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScrolling/Left" to="." method="_on_Left_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScrolling/Up" to="." method="_on_Up_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScrolling/Up" to="." method="_on_Up_mouse_exited"]
[connection signal="mouse_entered" from="EdgeScrolling/Down" to="." method="_on_Down_mouse_entered"]
[connection signal="mouse_exited" from="EdgeScrolling/Down" to="." method="_on_Down_mouse_exited"]
